; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_req_body.c_ngx_http_lua_inject_req_body_api.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_req_body.c_ngx_http_lua_inject_req_body_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_lua_ngx_req_read_body = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"read_body\00", align 1
@ngx_http_lua_ngx_req_discard_body = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"discard_body\00", align 1
@ngx_http_lua_ngx_req_get_body_data = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [14 x i8] c"get_body_data\00", align 1
@ngx_http_lua_ngx_req_get_body_file = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [14 x i8] c"get_body_file\00", align 1
@ngx_http_lua_ngx_req_set_body_data = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [14 x i8] c"set_body_data\00", align 1
@ngx_http_lua_ngx_req_set_body_file = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [14 x i8] c"set_body_file\00", align 1
@ngx_http_lua_ngx_req_init_body = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [10 x i8] c"init_body\00", align 1
@ngx_http_lua_ngx_req_append_body = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [12 x i8] c"append_body\00", align 1
@ngx_http_lua_ngx_req_body_finish = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [12 x i8] c"finish_body\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_http_lua_inject_req_body_api(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @ngx_http_lua_ngx_req_read_body, align 4
  %5 = call i32 @lua_pushcfunction(i32* %3, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_setfield(i32* %6, i32 -2, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @ngx_http_lua_ngx_req_discard_body, align 4
  %10 = call i32 @lua_pushcfunction(i32* %8, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @lua_setfield(i32* %11, i32 -2, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* @ngx_http_lua_ngx_req_get_body_data, align 4
  %15 = call i32 @lua_pushcfunction(i32* %13, i32 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @lua_setfield(i32* %16, i32 -2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @ngx_http_lua_ngx_req_get_body_file, align 4
  %20 = call i32 @lua_pushcfunction(i32* %18, i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @lua_setfield(i32* %21, i32 -2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %23 = load i32*, i32** %2, align 8
  %24 = load i32, i32* @ngx_http_lua_ngx_req_set_body_data, align 4
  %25 = call i32 @lua_pushcfunction(i32* %23, i32 %24)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @lua_setfield(i32* %26, i32 -2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %28 = load i32*, i32** %2, align 8
  %29 = load i32, i32* @ngx_http_lua_ngx_req_set_body_file, align 4
  %30 = call i32 @lua_pushcfunction(i32* %28, i32 %29)
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @lua_setfield(i32* %31, i32 -2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %33 = load i32*, i32** %2, align 8
  %34 = load i32, i32* @ngx_http_lua_ngx_req_init_body, align 4
  %35 = call i32 @lua_pushcfunction(i32* %33, i32 %34)
  %36 = load i32*, i32** %2, align 8
  %37 = call i32 @lua_setfield(i32* %36, i32 -2, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0))
  %38 = load i32*, i32** %2, align 8
  %39 = load i32, i32* @ngx_http_lua_ngx_req_append_body, align 4
  %40 = call i32 @lua_pushcfunction(i32* %38, i32 %39)
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @lua_setfield(i32* %41, i32 -2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.7, i64 0, i64 0))
  %43 = load i32*, i32** %2, align 8
  %44 = load i32, i32* @ngx_http_lua_ngx_req_body_finish, align 4
  %45 = call i32 @lua_pushcfunction(i32* %43, i32 %44)
  %46 = load i32*, i32** %2, align 8
  %47 = call i32 @lua_setfield(i32* %46, i32 -2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.8, i64 0, i64 0))
  ret void
}

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
